# rieszreg

./: .gitignore  .nojekyll  CLAUDE.md  DESIGN.md  README.md  developing.html  diagnostics.html  estimands.html  extending.html  index.html  install.html  intro.html  losses.html  pyproject.toml  r-interface.html  references.html  related.html  save-and-load.html  search.json  troubleshooting.html  tuning-and-cross-fitting.html
.githooks/: lint-docs.sh  pre-commit
backends/: boosting.html  forest.html  index.html  kernel.html  neural.html  tree.html
docs/: _quarto.yml  developing.qmd  estimands.qmd  install.qmd  intro.qmd  r-interface.qmd  related.qmd  troubleshooting.qmd
estimation/: custom.html  external.html  index.html
forestriesz/: CLAUDE.md  README.md
krrr/: CLAUDE.md  README.md
krrr/python/: pyproject.toml
krrr/python/krrr/: __init__.py  backend.py  bandwidth.py  diagnostics.py  estimator.py  kernels.py  predictor.py
krrr/python/krrr/solvers/: __init__.py  direct.py  falkon.py  nystrom_cg.py  rff.py
krrr/python/tests/: conftest.py  test_all_estimands.py  test_backend_protocol.py  test_consistency.py  test_estimator_ate.py  test_kernels.py  test_loss_validation.py  test_predict_path.py  test_reference_parity.py  test_sklearn_integration.py  test_solver_equivalence.py
rieszboost/: .gitignore  CLAUDE.md  README.md
rieszboost/python/: pyproject.toml
rieszboost/python/rieszboost/: __init__.py  augmentation.py  diagnostics.py  engine.py  estimand.py  estimands.py  estimator.py  general.py  losses.py  tracer.py
rieszboost/python/rieszboost/backends/: __init__.py  base.py  sklearn.py  xgboost.py
rieszboost/python/tests/: test_att.py  test_backend_equivalence.py  test_bregman.py  test_consistency.py  test_diagnostics.py  test_edge_cases.py  test_engine_ate.py  test_estimator_ate.py  test_general.py  test_lee_schuler_parity.py  test_local_shift.py  test_predict_path.py  test_property.py  test_serialization.py  test_sklearn_conformance.py  test_sklearn_integration.py  test_stochastic.py  test_tracer.py
rieszboost/python/tests/regression/: baselines.json  bench.py  test_baselines.py
riesznet/python/: pyproject.toml
riesznet/python/riesznet/: __init__.py  backend.py  estimator.py  losses_torch.py  modules.py
riesznet/python/tests/: conftest.py  test_all_estimands.py  test_backend_protocol.py  test_early_stopping.py  test_estimator_ate.py  test_loss_parity.py  test_loss_unsupported.py  test_predict_path.py  test_serialization.py  test_sklearn_integration.py
(+117 files in other folders)
