[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "krrr"
version = "0.0.1"
description = "Kernel ridge Riesz regression. Sister package to rieszboost (Singh 2021; Lee & Schuler 2025)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "rieszreg>=0.0.1",
]

[project.optional-dependencies]
test = ["pytest>=7", "pandas>=2.0"]
falkon = ["falkon>=0.9", "torch>=2.0"]
keops = ["pykeops>=2.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["krrr*"]
